title font color changed

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
                         <div class="level">
                             <div class="level-left">
                                 <div class="level-item">
-                                    <div class="title has-text-dark">What Makes Wine Fine?</div>
+                                    <div class="title has-text-light">What Makes Wine Fine?</div>
                                 </div>
                             </div>
                                 <div class="level-right">
