--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <document>
     <head>
+        <title>What makes wine fine?</title>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/proj4js/2.3.6/proj4.js"></script>
         <script src="https://code.highcharts.com/highcharts.js"></script>
